--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  min-height: 2000px;
+  /*min-height: 2000px;*/
   padding-top: 70px;
+  padding-bottom: 50px;
 }
 
 .label.label-success {
